[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', "wheel", "ninja", "pybind11", "numpy"]

[project]
name = "simplextree"
version = '0.2.1'
readme = "README.md"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
]
authors = [{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "more_itertools"]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/peekxc/simplextree-py"
Repository = "https://github.com/peekxc/simplextree-py"
Changelog = "https://github.com/peekxc/simplextree-py/blob/main/CHANGELOG.md"
Documentation = "https://peekxc.github.io/simplextree-py/pages/"

[project.optional-dependencies]
dev = [
	"ruff",
	"mypy>=1.0,<1.6",
	"black>=23.0,<24.0",
	"isort>=5.12,<5.13",
	"pytest",
	"pytest-cov",
	"twine>=1.11.0",
	"build",
	"setuptools",
	"wheel",
	"packaging",
]

[tool.meson-python.args]
setup = ['--default-library=static']

[tool.cibuildwheel]
test-requires = ["pytest", "pytest-cov", "coverage"]
test-command = "coverage run --source={package} -m pytest {package}/tests"

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 140
target-version = "py39"

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
